--- a/Areeba_siddique/index.html
+++ b/Areeba_siddique/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>ariba ye app ka kaam hai okay...</p>
+    <p>Areeba ye app ka kaam hai okay...</p>
 </body>
 </html>
