--- a/Sidra_mukhtar/index.html
+++ b/Sidra_mukhtar/index.html
@@ -7,6 +7,35 @@
     <title>Document</title>
 </head>
 <body>
-    <p>ariba ye app ka kaam hai okay...</p>
+     <!--***********  three extra header part starts ************--> 
+     <section class="header-extradiv">
+        <div class="container">
+            <div class="row">
+                <div class=" extra-div col-lg-4 col-md-4 col-12">
+                    <a href="#"><i class="fa fa-hospital-o" aria-hidden="true"></i></a>
+                    <h2>location</h2>
+                    <p>govt graduate college,bscs 2nd batch,21-25 ,assignment project</p>
+
+                </div>
+                <div class="extra-div col-lg-4 col-md-4 col-12">
+                    <a href="#"><i class="fa fa-user-md" aria-hidden="true"></i></a>
+                    <h2>sttaf</h2>
+                    <p>govt graduate college,bscs 2nd batch,21-25 ,assignment project</p>
+
+                </div>
+                <div class="extra-div col-lg-4 col-md-4 col-12">
+                    <a href="#"><i class="fa fa-ambulance" aria-hidden="true"></i></i></a>
+                    <h2>service</h2>
+                    <p>govt graduate college,bscs 2nd batch,21-25 ,assignment project</p>
+
+                </div>
+
+
+            </div>
+
+        </div>
+     </section>
+
+
 </body>
 </html>
